--- a/.github/workflows/yaml-checks.yml
+++ b/.github/workflows/yaml-checks.yml
@@ -2,7 +2,7 @@ concurrency:
   cancel-in-progress: true
   group: ${{ github.workflow }}-${{ github.ref }}
 jobs:
-  pretty:
+  yq-pretty:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
