--- a/.github/workflows/opentofu-checks.yml
+++ b/.github/workflows/opentofu-checks.yml
@@ -5,6 +5,9 @@ jobs:
   fmt:
     runs-on: ubuntu-latest
     steps:
+      - uses: opentofu/setup-opentofu@592200bd4b9bbf4772ace78f887668b1aee8f716 # v1.0.5
+        with:
+          tofu_version: 1.6.0
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           show-progress: false
