--- a/.github/workflows/terraform-checks.yml
+++ b/.github/workflows/terraform-checks.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: hashicorp/setup-terraform@651471c36a6092792c552e8b1bef71e592b462d8 # v3.1.1
         with:
-          terraform_version: 1.8.0
+          terraform_version: 1.8.0 # renovate: datasource=github-releases depName=hashicorp/terraform packageName=hashicorp/terraform
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           show-progress: false
