--- a/github/johnko/.envrc
+++ b/github/johnko/.envrc
@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
 
 
-# export GITHUB_TOKEN=$(op read "op://Private/")
+# export GITHUB_TOKEN=$(op read "op://Private/1pcli-github-api-token")
 
 if [[ -e /opt/homebrew/bin/gh ]]; then
   export GH_PATH=/opt/homebrew/bin/gh
