--- a/.github/workflows/opentofu-checks.yml
+++ b/.github/workflows/opentofu-checks.yml
@@ -2,7 +2,7 @@ concurrency:
   cancel-in-progress: true
   group: ${{ github.workflow }}-${{ github.ref }}
 jobs:
-  fmt:
+  validate:
     runs-on: ubuntu-latest
     steps:
       - uses: opentofu/setup-opentofu@000eeb8522f0572907c393e8151076c205fdba1b # v1.0.6
@@ -14,6 +14,7 @@ jobs:
       - name: Apply terraform fmt and find unformatted files
         run: |
           bash -ex .github/opentofu-fmt.sh
+          bash -ex .github/opentofu-validate.sh
     timeout-minutes: 10
 name: opentofu-checks
 on:
