chore: track github_actions_secret.RENOVATE_APP_ID

--- a/.envrc
+++ b/.envrc
@@ -5,3 +5,6 @@
 if [[ -e /opt/homebrew/bin/gh ]]; then
   export GH_PATH=/opt/homebrew/bin/gh
 fi
+
+TF_VAR_RENOVATE_APP_ID=$(op read "op://Private/1pcli-githubapp-selfhosted241renovatebot/njelohmput7riwdcrif7vahana")
+export TF_VAR_RENOVATE_APP_ID
