chore: track github_actions_secret.RENOVATE_PRIVATE_KEY

--- a/.envrc
+++ b/.envrc
@@ -8,3 +8,6 @@ fi
 
 TF_VAR_RENOVATE_APP_ID=$(op read "op://Private/1pcli-githubapp-selfhosted241renovatebot/njelohmput7riwdcrif7vahana")
 export TF_VAR_RENOVATE_APP_ID
+
+TF_VAR_RENOVATE_PRIVATE_KEY=$(op read "op://Private/1pcli-githubapp-selfhosted241renovatebot/private key")
+export TF_VAR_RENOVATE_PRIVATE_KEY
