chore: source .envrc without output

--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,5 @@
 #!/usr/bin/env bash
+set +x # hide secret env values from output
 
 # export GITHUB_TOKEN=$(op read "op://Private/1pcli-github-api-token")
 
