fix: handle CI and op missing

--- a/.envrc
+++ b/.envrc
@@ -1,11 +1,22 @@
 #!/usr/bin/env bash
 set +x # hide secret env values from output
 
-# export GITHUB_TOKEN=$(op read "op://Private/1pcli-github-api-token")
+if [[ "true" == "$CI" ]]; then
+  if ! type op &>/dev/null; then
+    echo "CI=$CI"
+    echo "op: command not found"
+    set -x
+    exit 0
+  fi
+fi
 
 if [[ -e /opt/homebrew/bin/gh ]]; then
   export GH_PATH=/opt/homebrew/bin/gh
 fi
+
+set +x # hide secret env values from output
+
+# export GITHUB_TOKEN=$(op read "op://Private/1pcli-github-api-token")
 
 TF_VAR_RENOVATE_APP_ID=$(op read "op://Private/1pcli-githubapp-selfhosted241renovatebot/njelohmput7riwdcrif7vahana")
 export TF_VAR_RENOVATE_APP_ID
