fix: pr path for .github/tf.sh

--- a/.github/workflows/opentofu-checks.yml
+++ b/.github/workflows/opentofu-checks.yml
@@ -21,7 +21,7 @@ on:
   pull_request:
     paths:
       - .github/opentofu-fmt.sh
+      - .github/tf.sh
       - .github/workflows/opentofu-checks.yml
       - '**.otf'
       - '**.tf'
-      - tf.sh
