--- a/.github/workflows/opentofu-checks.yml
+++ b/.github/workflows/opentofu-checks.yml
@@ -21,6 +21,7 @@ on:
   pull_request:
     paths:
       - .github/opentofu-fmt.sh
+      - .github/opentofu-validate.sh
       - .github/tf.sh
       - .github/workflows/opentofu-checks.yml
       - '**.otf'
