set parallelism in .envrc

--- a/.envrc
+++ b/.envrc
@@ -23,3 +23,10 @@ export TF_VAR_RENOVATE_APP_ID
 
 TF_VAR_RENOVATE_PRIVATE_KEY=$(op read "op://Private/1pcli-githubapp-selfhosted241renovatebot/private key")
 export TF_VAR_RENOVATE_PRIVATE_KEY
+
+# reduce parallelism
+PARALLELISM_ARG="-parallelism=1"
+TF_CLI_ARGS_plan="$PARALLELISM_ARG"
+export TF_CLI_ARGS_plan
+TF_CLI_ARGS_apply="$PARALLELISM_ARG"
+export TF_CLI_ARGS_apply
